--- a/layouts/partials/slides.html
+++ b/layouts/partials/slides.html
@@ -8,7 +8,7 @@
     {{ $content := replace .Content "<div class=\"footnotes\">\n\n<hr />" "<div class=\"footnotes\">" }}
 
     {{/* Let `<hr />` delimit slides. */}}
-    {{ range (split $content "<hr />") }}
+    {{ range (split $content "<hr>") }}
 
     {{/* Each `<section>` defines a new slide. */}}
     {{/* Only begin new slide `<section>` if not already added by custom `slide` shortcode. */}}
